k8s/ingress/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: user-api.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 8080

    - host: mysql.k8s.com
      http:
        paths:
          - backend:
              service:
                name: mysql
                port:
                  number: 3306
            path: /
            pathType: Prefix
